# configextractor-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.md  README.md  config.yaml  pyproject.toml  requirements.txt  ruff.toml  setup.py
RATDecoders/: TA.py  setup.py
RATDecoders/malwareconfig/: crypto.py
RATDecoders/malwareconfig/decoders/: aar.py  darkcomet.py  mirai.py  netwire.py  (+3 more)
configextractor/: cli.py  config.yaml  main.py  notes.py  wrapper_malconf.py
configextractor/.deprecated/: cli.py  wrapper_malconf.py
configextractor/frameworks/: __init__.py  base.py  cape.py  maco.py  malduck.py  malduck.py.bak  mwcp.py  ratdecoder.py  ratdecoder.py.bak
configextractor_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dependencies/: yara_parser.yaml
dependencies/mwcfg-modules-custom/: README.md
dependencies/mwcp_parsers/: BitPaymer.py  BuerLoader.py  DoppelPaymer.py  DridexLoader.py  Emotet.py  Hancitor.py  IcedIDStage1.py  IcedIDStage2.py  Loki.py  QakBot.py  Zloader.py  __init__.py  parser_config.yml
dependencies/tag_rules/: emotet.rule
dependencies/yara_rules/: azorult.yara  chches.yara  emotet.yara  emotetinmemory.yara  enfal.yara  example.yara  rcsession.yara  redleaf.yara  redsip.yara  retefe.yara  smokeloader.yara  zloader.yara
pipelines/: publish.yaml  test.yaml
tests/: config.yaml  requirements.txt  test_configextractor.py  test_detection.py  test_run.py
tests/parsers/: cape_extractor.py  maco_extractor.py  mwcp_extractor.py
tests/test_parsers/: cape.py  maco.py
tests/venv_parsers/: requirements.txt
(+2 files in other folders)
