[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "configextractor-py"
description = "A library for extracting malware configurations across multiple frameworks"
dynamic = ["version"]
dependencies = [
    "cart",
    "click",
    "maco >= 1.1.14",
    "mwcfg",
    "mwcp",
    "setuptools",
]
requires-python = ">=3.8"
authors = [{ name = "cccs-rs" }]
maintainers = [{ name = "cccs-rs" }]
readme = "README.md"
license = { file = "LICENSE.md" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",

    "Topic :: Software Development :: Libraries :: Python Modules",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
cx = "configextractor.cli:main"
configextractor = "configextractor.cli:main"

[project.urls]
Repository = "https://github.com/CybercentreCanada/configextractor-py"
Issues = "https://github.com/CybercentreCanada/configextractor-py/issues"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
